Added alpine docker image, updated swagger documentation
